Compilation_Racket_Mips/piton/tests/errors/param_type.py
def a(b: int):
    return
a("ABC")